force-app/main/default/objects/IndividualApplication/fields/HasHighSchoolDiplomaOrGED__c.field-meta.xml
<CustomField>
    <fullName>HasHighSchoolDiplomaOrGED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has High School Diploma or GED</label>
    <type>Checkbox</type>
</CustomField>