force-app/main/default/objects/IndividualApplication/fields/HasJDDateObtained__c.field-meta.xml
<CustomField>
    <fullName>HasJDDateObtained__c</fullName>
    <label>JD Date Obtained</label>
    <type>Date</type>
</CustomField>