force-app/main/default/objects/IndividualApplication/fields/HasJDNameOfInstitution__c.field-meta.xml
<CustomField>
    <fullName>HasJDNameOfInstitution__c</fullName>
    <label>JD Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>