force-app/main/default/objects/IndividualApplication/fields/HasLegalOrderViolation__c.field-meta.xml
<CustomField>
    <fullName>HasLegalOrderViolation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Order Violation</label>
    <type>Checkbox</type>
</CustomField>