force-app/main/default/objects/IndividualApplication/fields/HasLicenseDisciplinaryAction__c.field-meta.xml
<CustomField>
    <fullName>HasLicenseDisciplinaryAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Disciplinary Action</label>
    <type>Checkbox</type>
</CustomField>