force-app/main/default/objects/IndividualApplication/fields/HasMLSDateObtained__c.field-meta.xml
<CustomField>
    <fullName>HasMLSDateObtained__c</fullName>
    <label>MLS Date Obtained</label>
    <type>Date</type>
</CustomField>