force-app/main/default/objects/IndividualApplication/fields/HasMLSNameOfInstitution__c.field-meta.xml
<CustomField>
    <fullName>HasMLSNameOfInstitution__c</fullName>
    <label>MLS Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>