force-app/main/default/objects/IndividualApplication/fields/HasOtherAccreditedLawSchoolDegree__c.field-meta.xml
<CustomField>
    <fullName>HasOtherAccreditedLawSchoolDegree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Other accredited Law School Degree</label>
    <type>Checkbox</type>
</CustomField>