force-app/main/default/objects/IndividualApplication/fields/HasPassedAZKnowledgeExam__c.field-meta.xml
<CustomField>
    <fullName>HasPassedAZKnowledgeExam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has passed AZ Written Knowledge Exam</label>
    <type>Checkbox</type>
</CustomField>