force-app/main/default/objects/IndividualApplication/fields/HasPassedExamsCVRorRPR__c.field-meta.xml
<CustomField>
    <fullName>HasPassedExamsCVRorRPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Passed CVR/RPR Exams</label>
    <type>Checkbox</type>
</CustomField>