force-app/main/default/objects/IndividualApplication/fields/HasPendingAuthorityActions__c.field-meta.xml
<CustomField>
    <fullName>HasPendingAuthorityActions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has pending authority actions</label>
    <type>Checkbox</type>
</CustomField>