force-app/main/default/objects/IndividualApplication/fields/HasPendingJobOffer__c.field-meta.xml
<CustomField>
    <fullName>HasPendingJobOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has pending job offer with AZ Court</label>
    <type>Checkbox</type>
</CustomField>