force-app/main/default/objects/IndividualApplication/fields/HasPetitionComplaintFiled__c.field-meta.xml
<CustomField>
    <fullName>HasPetitionComplaintFiled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Petition or Complaint Filed</label>
    <type>Checkbox</type>
</CustomField>