force-app/main/default/objects/IndividualApplication/fields/HasPublicHarmConduct__c.field-meta.xml
<CustomField>
    <fullName>HasPublicHarmConduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Harm Conduct</label>
    <type>Checkbox</type>
</CustomField>