force-app/main/default/objects/IndividualApplication/fields/HasRegulatoryViolation__c.field-meta.xml
<CustomField>
    <fullName>HasRegulatoryViolation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Violation</label>
    <type>Checkbox</type>
</CustomField>