force-app/main/default/objects/IndividualApplication/fields/HasResignedInLieuSuspension__c.field-meta.xml
<CustomField>
    <fullName>HasResignedInLieuSuspension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Resigned In Lieu Suspension</label>
    <type>Checkbox</type>
</CustomField>