force-app/main/default/objects/IndividualApplication/fields/HasSuretyOnBond__c.field-meta.xml
<CustomField>
    <fullName>HasSuretyOnBond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Surety On Bond</label>
    <type>Checkbox</type>
</CustomField>