force-app/main/default/objects/IndividualApplication/fields/HasToRespondFurnishInfo__c.field-meta.xml
<CustomField>
    <fullName>HasToRespondFurnishInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has To Respond Furnish Info</label>
    <type>Checkbox</type>
</CustomField>