force-app/main/default/objects/IndividualApplication/fields/HasVerifiedStatementOfCourse__c.field-meta.xml
<CustomField>
    <fullName>HasVerifiedStatementOfCourse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Verified Statement of Course</label>
    <type>Checkbox</type>
</CustomField>