force-app/main/default/objects/IndividualApplication/fields/HasYesTakeABE__c.field-meta.xml
<CustomField>
    <fullName>HasYesTakeABE__c</fullName>
    <label>Yes take ABE</label>
    <type>Date</type>
</CustomField>