force-app/main/default/objects/IndividualApplication/fields/Have_been_LDP_or_Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Have_been_LDP_or_Paralegal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have been LDP or Paralegal</label>
    <type>Checkbox</type>
</CustomField>