force-app/main/default/objects/IndividualApplication/fields/HaveaBachelorfour__c.field-meta.xml
<CustomField>
    <fullName>HaveaBachelorfour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>have a four year Bachelor</label>
    <type>Checkbox</type>
</CustomField>