force-app/main/default/objects/IndividualApplication/fields/HaveAnyDebtsInclude__c.field-meta.xml
<CustomField>
    <fullName>HaveAnyDebtsInclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Any Debts Include</label>
    <type>Checkbox</type>
</CustomField>