force-app/main/default/objects/IndividualApplication/fields/Hiring_Personnel_Email__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Personnel_Email__c</fullName>
    <label>Hiring Personnel Email</label>
    <type>Email</type>
</CustomField>