force-app/main/default/objects/IndividualApplication/fields/Hiring_Personnel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Personnel_Name__c</fullName>
    <label>Hiring Personnel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>