force-app/main/default/objects/IndividualApplication/fields/Hiring_Personnel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Personnel_Phone__c</fullName>
    <label>Hiring Personnel Phone</label>
    <type>Phone</type>
</CustomField>