force-app/main/default/objects/IndividualApplication/fields/Hours_completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_completed__c</fullName>
    <label>Hours completed of education renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>