force-app/main/default/objects/IndividualApplication/fields/JDFromSchool__c.field-meta.xml
<CustomField>
    <fullName>JDFromSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JD from a law school</label>
    <type>Checkbox</type>
</CustomField>