force-app/main/default/objects/IndividualApplication/fields/Law_Degree_Certified_Date__c.field-meta.xml
<CustomField>
    <fullName>Law_Degree_Certified_Date__c</fullName>
    <label>Law Degree Certified Date</label>
    <type>Date</type>
</CustomField>