force-app/main/default/objects/IndividualApplication/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <formula>LicenseType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Name</label>
    <type>Text</type>
</CustomField>