force-app/main/default/objects/IndividualApplication/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <formula>LicensePermitName.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Number</label>
    <type>Text</type>
</CustomField>