force-app/main/default/objects/IndividualApplication/fields/LLMFromSchool__c.field-meta.xml
<CustomField>
    <fullName>LLMFromSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LLM from a law school</label>
    <type>Checkbox</type>
</CustomField>