force-app/main/default/objects/IndividualApplication/fields/LP_Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>LP_Counties_Served__c</fullName>
    <label>Counties Served</label>
    <length>255</length>
    <type>Text</type>
</CustomField>