force-app/main/default/objects/IndividualApplication/fields/Min1YearSubstantiveExp__c.field-meta.xml
<CustomField>
    <fullName>Min1YearSubstantiveExp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min 1 Year Substantive Experience</label>
    <type>Checkbox</type>
</CustomField>