force-app/main/default/objects/IndividualApplication/fields/MLSFromSchool__c.field-meta.xml
<CustomField>
    <fullName>MLSFromSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLS from a Law School</label>
    <type>Checkbox</type>
</CustomField>