force-app/main/default/objects/IndividualApplication/fields/Name_of_employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_employer__c</fullName>
    <label>If no, name of employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>