force-app/main/default/objects/IndividualApplication/fields/Name_of_Law_School_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Law_School_Institution__c</fullName>
    <label>Name of Law School Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>