force-app/main/default/objects/IndividualApplication/fields/Name_on_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Certificate__c</fullName>
    <label>Name to appear on Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>