force-app/main/default/objects/IndividualApplication/fields/PracticeofArizonalaw__c.field-meta.xml
<CustomField>
    <fullName>PracticeofArizonalaw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practice of Law in Arizona</label>
    <type>Checkbox</type>
</CustomField>