force-app/main/default/objects/IndividualApplication/fields/Prof_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Prof_Suffix__c</fullName>
    <label>Prof Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>