force-app/main/default/objects/IndividualApplication/fields/Public_Directory_Email__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Email__c</fullName>
    <label>Public Directory Email</label>
    <type>Email</type>
</CustomField>