force-app/main/default/objects/IndividualApplication/fields/Public_Directory_Full_Consent__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Full_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Directory Full Consent</label>
    <type>Checkbox</type>
</CustomField>