force-app/main/default/objects/IndividualApplication/fields/Public_Directory_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Name__c</fullName>
    <label>Public Directory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>