force-app/main/default/objects/IndividualApplication/fields/Public_Directory_Phone__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Phone__c</fullName>
    <label>Public Directory Phone</label>
    <type>Phone</type>
</CustomField>