force-app/main/default/objects/IndividualApplication/fields/Public_Directory_Website__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Website__c</fullName>
    <label>Public Directory Website</label>
    <type>Url</type>
</CustomField>