force-app/main/default/objects/IndividualApplication/fields/Reporter_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporter_Type__c</fullName>
    <label>Type of Certified Reporter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stenographer</fullName>
            </value>
            <value>
                <fullName>Voice Writer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>