force-app/main/default/objects/IndividualApplication/fields/Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Name__c</fullName>
    <label>Signature of Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>