force-app/main/default/objects/IndividualApplication/fields/Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Reason__c</fullName>
    <label>Reason for Status Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>