force-app/main/default/objects/IndividualApplication/fields/Statutory_Agent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Statutory_Agent_Last_Name__c</fullName>
    <label>Statutory Agent’s Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>