force-app/main/default/objects/IndividualApplication/fields/Statutory_Agent_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Statutory_Agent_Middle_Initial__c</fullName>
    <label>Statutory Agent’s Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>