force-app/main/default/objects/IndividualApplication/fields/Supervising_Entity__c.field-meta.xml
<CustomField>
    <fullName>Supervising_Entity__c</fullName>
    <label>Supervising Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>