force-app/main/default/objects/IndividualApplication/fields/Supervising_Entity_AZCLDP__c.field-meta.xml
<CustomField>
    <fullName>Supervising_Entity_AZCLDP__c</fullName>
    <label>Supervising Entity AZCLDP #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>