force-app/main/default/objects/IndividualApplication/fields/Supervisor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_First_Name__c</fullName>
    <label>Supervisor’s First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>