force-app/main/default/objects/IndividualApplication/fields/Supervisor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Last_Name__c</fullName>
    <label>Supervisor’s Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>