force-app/main/default/objects/IndividualApplication/fields/Supervisor_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Middle_Initial__c</fullName>
    <label>Supervisor’s Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>