force-app/main/default/objects/IndividualApplication/fields/Supervisor_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Phone__c</fullName>
    <label>Supervisor&apos;s Phone</label>
    <type>Phone</type>
</CustomField>