force-app/main/default/objects/IndividualApplication/fields/Supervisor_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_s_Title__c</fullName>
    <label>Supervisor&apos;s Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>