force-app/main/default/objects/IndividualApplication/fields/Years_served_Court_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Years_served_Court_Reporter__c</fullName>
    <label>Years served as Court Reporter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>