force-app/main/default/objects/IndividualApplication/fields/YearsAsCourtEmployee__c.field-meta.xml
<CustomField>
    <fullName>YearsAsCourtEmployee__c</fullName>
    <label>Years as Court Employee</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>