force-app/main/default/objects/IndividualApplication/fields/YearsOfDoingSupervisedLdpServices__c.field-meta.xml
<CustomField>
    <fullName>YearsOfDoingSupervisedLdpServices__c</fullName>
    <label>Years of doing Supervised Ldp Services</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>