force-app/main/default/objects/IndividualApplication/fields/YearsOfProvidingLdpServices__c.field-meta.xml
<CustomField>
    <fullName>YearsOfProvidingLdpServices__c</fullName>
    <label>Years of providing Ldp Services</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>