force-app/main/default/objects/IndividualApplication/fields/YearsUnderSupervisionOfAttorney__c.field-meta.xml
<CustomField>
    <fullName>YearsUnderSupervisionOfAttorney__c</fullName>
    <label>Years under supervision of attorney</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>