force-app/main/default/objects/IndividualApplication/recordTypes/CRI_Application.recordType-meta.xml
<RecordType>
    <fullName>CRI_Application</fullName>
    <active>true</active>
    <label>Certified Reporter Individual Application</label>
</RecordType>