force-app/main/default/objects/IndividualApplication/recordTypes/LDI_Application.recordType-meta.xml
<RecordType>
    <fullName>LDI_Application</fullName>
    <active>true</active>
    <label>Legal Document Preparer Individual</label>
</RecordType>