force-app/main/default/objects/IndividualApplication/recordTypes/LP_Application.recordType-meta.xml
<RecordType>
    <fullName>LP_Application</fullName>
    <active>true</active>
    <label>Legal Paraprofessional Application</label>
</RecordType>