force-app/main/default/objects/IndividualApplication/validationRules/Certified_Date_Required_On_Approvals.validationRule-meta.xml
<ValidationRule>
    <fullName>Certified_Date_Required_On_Approvals</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; TEXT(Status) == &apos;Approved&apos; &amp;&amp; ISBLANK(Certified_Date__c)</errorConditionFormula>
    <errorDisplayField>Certified_Date__c</errorDisplayField>
    <errorMessage>Certified Date is required upon Approval of Application</errorMessage>
</ValidationRule>