force-app/main/default/objects/IndividualApplication/validationRules/Required_On_Approvals_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_On_Approvals_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; TEXT(Status) == &apos;Approved&apos; &amp;&amp; ISBLANK( Status_Change_Reason__c )</errorConditionFormula>
    <errorDisplayField>Status_Change_Reason__c</errorDisplayField>
    <errorMessage>Reason for Status Change is required upon Approval of Application</errorMessage>
</ValidationRule>