force-app/main/default/objects/IndividualApplication/listViews/Admin_Staff_IndividualApplication.listView-meta.xml
<ListView>
    <fullName>Admin_Staff_IndividualApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin Staff</label>
    <queue>Admin_Staff</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>