force-app/main/default/objects/IndividualApplication/listViews/All_Legal_Paraprofessional_Applications.listView-meta.xml
<ListView>
    <fullName>All_Legal_Paraprofessional_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>IndividualApplication.LP_Application</value>
    </filters>
    <label>All Legal Paraprofessional Applications</label>
</ListView>