force-app/main/default/objects/IndividualApplication/listViews/Certification_Specialist_IndividualApplication.listView-meta.xml
<ListView>
    <fullName>Certification_Specialist_IndividualApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Certification Specialist</label>
    <queue>Certification_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>